feat: support Iterable in usingRecursiveAssertion
deprecate CollectionAssertionPolicy in favor of IterableAssertionPolicy
setting collection policy sets the corresponding iterable policy